--- a/_data/info.yml
+++ b/_data/info.yml
@@ -6,9 +6,6 @@ social:
 - name: Facebook
   url: https://www.facebook.com/andrew.perry.31521/
 
-- name: Flickr
-  url: http://www.flickr.com/photos/jayperryworks/
-
 relationships:
-- name: Frontier Culture Museum
-  url: http://www.frontiermuseum.org
+- name: Clemson University, Dept. of Automotive Engineering
+  url: http://www.clemson.edu/cecas/departments/automotive-engineering/
